5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1850_1280.log
== TEST (2019-06-22 14:03:46) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
			
	if (xtab or y tab <	0) or (xtab or ytab > shape(tabuleiro)):
		xtab=xtab
		ytab=ytab
		
   elif tabuleiro[ytab,xtab] == 11:
        moeda = moeda + 1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
   elif tabuleiro[ytab,xtab] == 22:
        life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		ytab=ytab
		xtab=xtab

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 18
    if (xtab or y tab <	0) or (xtab or ytab > shape(tabuleiro)):
                                                               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:04:57) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
			
	if (xtab < 0)or(ytab<0)or(xtab > shape(tabuleiro)or ytab > shape(tabuleiro)):
		xtab=xtab
		ytab=ytab
		
   elif tabuleiro[ytab,xtab] == 11:
        moeda = moeda + 1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
   elif tabuleiro[ytab,xtab] == 22:
        life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		ytab=ytab
		xtab=xtab

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 18
    if (xtab < 0)or(ytab<0)or(xtab > shape(tabuleiro)or ytab > shape(tabuleiro)):
                                                                                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:05:27) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
			
	if ((xtab < 0)or(ytab<0))or((xtab > shape(tabuleiro))or (ytab > shape(tabuleiro))):
		xtab=xtab
		ytab=ytab
		
   elif tabuleiro[ytab,xtab] == 11:
        moeda = moeda + 1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
   elif tabuleiro[ytab,xtab] == 22:
        life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		ytab=ytab
		xtab=xtab

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 18
    if ((xtab < 0)or(ytab<0))or((xtab > shape(tabuleiro))or (ytab > shape(tabuleiro))):
                                                                                      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:05:40) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
			
	if ((xtab < 0)or(ytab<0)):
		xtab=xtab
		ytab=ytab
		
   elif tabuleiro[ytab,xtab] == 11:
        moeda = moeda + 1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
   elif tabuleiro[ytab,xtab] == 22:
        life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		ytab=ytab
		xtab=xtab

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 18
    if ((xtab < 0)or(ytab<0)):
                             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:06:05) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
			
	if xtab<0:
		xtab=xtab
		ytab=ytab
		
   elif tabuleiro[ytab,xtab] == 11:
        moeda = moeda + 1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
   elif tabuleiro[ytab,xtab] == 22:
        life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		ytab=ytab
		xtab=xtab

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 18
    if xtab<0:
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:06:11) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
			
	if (xtab<0):
		xtab=xtab
		ytab=ytab
		
   elif tabuleiro[ytab,xtab] == 11:
        moeda = moeda + 1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
   elif tabuleiro[ytab,xtab] == 22:
        life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		ytab=ytab
		xtab=xtab

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 18
    if (xtab<0):
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:06:22) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
			
	   if (xtab<0):
		xtab=xtab
		ytab=ytab
		
   elif tabuleiro[ytab,xtab] == 11:
        moeda = moeda + 1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
   elif tabuleiro[ytab,xtab] == 22:
        life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		ytab=ytab
		xtab=xtab

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 18
    if (xtab<0):
               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:06:28) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
			
	  
   elif tabuleiro[ytab,xtab] == 11:
        moeda = moeda + 1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
   elif tabuleiro[ytab,xtab] == 22:
        life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		ytab=ytab
		xtab=xtab

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 26
    elif tabuleiro[ytab,xtab] == 33:
                                   ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:06:51) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
			

		
   elif tabuleiro[ytab,xtab] == 11:
        moeda = moeda + 1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
   elif tabuleiro[ytab,xtab] == 22:
        life = life - 5
	elif tabuleiro[ytab,xtab] == 33:
		  ytab=ytab
		  xtab=xtab

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 27
    elif tabuleiro[ytab,xtab] == 33:
                                   ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:07:00) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
			

		
   elif tabuleiro[ytab,xtab] == 11:
        moeda = moeda + 1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
   elif tabuleiro[ytab,xtab] == 22:
        life = life - 5
			
	elif tabuleiro[ytab,xtab] == 33:
		  ytab=ytab
		  xtab=xtab

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 28
    elif tabuleiro[ytab,xtab] == 33:
                                   ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:07:07) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
			

		
   elif tabuleiro[ytab,xtab] == 11:
        moeda = moeda + 1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
   elif tabuleiro[ytab,xtab] == 22:
        life = life - 5
	#moeda		
	elif tabuleiro[ytab,xtab] == 33:
		  ytab=ytab
		  xtab=xtab

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 28
    elif tabuleiro[ytab,xtab] == 33:
                                   ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:38:00) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
			

		
   if tabuleiro[ytab,xtab] == 11:
		moeda = moeda + 1
      tabuleiro[ytab,xtab] = 0
   elif tabuleiro[ytab,xtab] == 22:
      life = life - 5	
	elif tabuleiro[ytab,xtab] == 33:
		ytab=ytab
		xtab=xtab

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 21
    moeda = moeda + 1
                    ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:38:15) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
			

		
   if tabuleiro[ytab,xtab] == 11:
	   moeda = moeda + 1
      tabuleiro[ytab,xtab] = 0
   elif tabuleiro[ytab,xtab] == 22:
      life = life - 5	
	elif tabuleiro[ytab,xtab] == 33:
		ytab=ytab
		xtab=xtab

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 22
    tabuleiro[ytab,xtab] = 0
                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:38:34) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1		
   if tabuleiro[ytab,xtab] == 11:
		moeda=moeda+1
	   
     

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 18
    moeda=moeda+1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:39:20) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1		
			
   if tabuleiro[ytab,xtab] == 11:
		moeda=moeda+1
	   
     

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 19
    moeda=moeda+1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:39:40) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1		
			
   if tabuleiro[ytab,xtab] == 11:
		moeda=moeda+1
	else:
		moeda=0
	   
     

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 19
    moeda=moeda+1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:39:46) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1		
			
   if tabuleiro[ytab,xtab] == 11:
		
		moeda=moeda+1
	else:
		moeda=0
	   
     

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 20
    moeda=moeda+1
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:40:06) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1		
			
   if tabuleiro[ytab,xtab] == 11:
		tabuleiro[ytab,xtab]=0
		moeda=moeda+1
	else:
		moeda=0
	   
     

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 19
    tabuleiro[ytab,xtab]=0
                         ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:40:14) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1		
			

	   
     

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:40:35) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1	
			
	if tabuleiro[ytab,xtab]==11:
		moeda=moeda+1
			

	   
     

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 18
    if tabuleiro[ytab,xtab]==11:
                               ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:40:47) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1	
			
	if(tabuleiro[ytab,xtab]==11):
		moeda=moeda+1
			

	   
     

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)

-- ERROR:
File "XXXX", line 18
    if(tabuleiro[ytab,xtab]==11):
                                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:44:05) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:44:23) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	if t[x,y]==11:
		moeda=moeda+1
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:44:39) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	if t[y,x]==11:
		moeda=moeda+1
		t[y,x]=0
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:45:09) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	if t[y,x]==11:
		moeda=moeda+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:45:46) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	if t[y,x]==11:
		moeda=moeda+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
	elif t[y,x]==33:
		y=y
		x=x
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:53:12) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	if t[y,x]==11:
		moeda=moeda+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
	elif t[y,x]==33:
		y=p
		x=j
	elif y<0 or x<0:
		y=p
		x=j
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:53:32) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	if t[y,x]==11:
		moeda=moeda+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
	elif t[y,x]==33:
		y=p
		x=j
	elif y<0 or x<0:
		y=p
		x=j
		
print(x)
print(y)
print(m)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:53:56) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	if t[y,x]==11:
		m=m+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
	elif t[y,x]==33:
		y=p
		x=j
	elif y<0 or x<0:
		y=p
		x=j
		
print(x)
print(y)
print(m)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:54:27) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	if t[y,x]==11:
		n=n+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
	elif t[y,x]==33:
		y=p
		x=j
	elif y<0 or x<0:
		y=p
		x=j
		
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:55:23) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	
	if y<0 or x<0:
		y=p
		x=j
	elif t[y,x]==11:
		n=n+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
	elif t[y,x]==33:
		y=p
		x=j	
		
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:56:32) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	
	if (y<0 or x<0)or(y>shape(t) or x>shape(t)):
		y=p
		x=j
	elif t[y,x]==11:
		n=n+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
	elif t[y,x]==33:
		y=p
		x=j	
		
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 17:57:58) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	
	if (y<0 or x<0)or((y>shape(t)) or (x>shape(t))):
		y=p
		x=j
	elif t[y,x]==11:
		n=n+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
	elif t[y,x]==33:
		y=p
		x=j	
		
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:04:46) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	
	if (y<0 or x<0):
		y=p
		x=j
	elif t[y,x]==11:
		n=n+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
	elif t[y,x]==33:
		y=p
		x=j	
		
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:05:10) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	
	if (y<0 or x<0):
		y=p
		x=j
	elif t[y,x]==11:
		n=n+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
	elif t[y,x]==33:
		y=p
		x=j	
		
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:07:14) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	
	if (y<0 or x<0):
		y=p
		x=j
	elif (t[y,x])==11:
		n=n+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
	elif t[y,x]==33:
		y=p
		x=j	
		
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:07:22) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	
	if (y<0 or x<0):
		y=p
		x=j
	elif (t[y,x])==11:
		n=n+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
	elif t[y,x]==33:
		y=p
		x=j	
		
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:07:59) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	print(y)
	print(x)
	if (y<0 or x<0):
		y=p
		x=j
	elif (t[y,x])==11:
		n=n+1
		t[y,x]=0
	elif t[y,x]==22:
		l=l-5
	elif t[y,x]==33:
		y=p
		x=j	
		
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:08:26) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	print(y)
	print(x)
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:09:45) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	print(y)
	print(x)
	if(y<0)or(x<0):
		y=p
		x=j
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:22:59) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	print(y)
	print(x)
	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t))or(x>shape(t)):
		y=p
		x=j
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:26:23) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	print(y)
	print(x)
	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:27:12) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	print(y)
	print(x)
	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	elif t[y,x]==11:
		n=n+1
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:12) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	print(y)
	print(x)
	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	print(t[y,x])
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:29:57) 
-- CODE:
from numpy import *
tabuleiro = array(eval(input("Tabuleiro: ")))
mov = input("Movimentos: ")
xtab = 0
ytab = 0
moeda = 0
life = 100
for x in mov:
   if x == 'A':
        xtab = xtab - 1
   elif x == 'D':
         xtab = xtab + 1
   elif x == 'W':
        ytab = ytab - 1
   elif x == 'S':
        ytab = ytab + 1
   if tabuleiro[ytab,xtab] == 11:
        moeda = moeda + 1
        # Apaga moeda do tabuleiro
        tabuleiro[ytab,xtab] = 0
    # Zumbi
   elif tabuleiro[ytab,xtab] == 22:
        life = life - 5

# Imprime saidas
print("posicao x: ", xtab)
print("posicao y: ", ytab)
print("moedas: ", moeda)
print("life: ", life)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:30:32) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1
	print(y)
	print(x)
	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:31:00) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	print(y)
	print(x)	
	
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:33:17) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	print(t[0,0])
	
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:33:28) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	print(t[0,0])
	
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:34:50) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
		
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	print(y)
	print(x)
	
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:35:29) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	
	if(t[y,x])==11:
		n=n+1
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:36:08) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	
	if(t[y,x])==11:
		n=n+1
	else:
		print("ajsja")
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:36:47) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:37:59) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	print(y,x)	
	
	
print(x)
print(y)
print(n)
print(l)
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:39:47) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	elif(t[y,x]==33):
		y=p
		x=j
	
	
print(x)
print(y)
print(n)
print(l)
0 0
0 0
0 1
0 2
0 2
1 2
1 3
2 3
2 2
3 2
4 2
4 1
3 1
4 1
4 0
		


-- ERROR:
File "XXXX", line 35
    0 0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:39:59) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	elif(t[y,x]==33):
		y=p
		x=j
	
	
print(x)
print(y)
print(n)
print(l)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:42:59) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	print(t[y,x])
	
	
print(x)
print(y)
print(n)
print(l)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:44:16) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	print(y,x)	
	print(t[y,x])
	
	
print(x)
print(y)
print(n)
print(l)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:45:59) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	
	if(t[y,x]==33):
		y=p
		x=j
	elif(t[y,x]==22):
		l=l-5
	elif(t[y,x]==11):
		n=n+1
		t[y,x]=0
	print(y,x)	
	print(t[y,x])
	
	
print(x)
print(y)
print(n)
print(l)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:47:42) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	
	if(t[y,x]==33):
		y=p
		x=j
	elif(t[y,x]==22):
		l=l-5
	elif(t[y,x]==11):
		n=n+1
		t[y,x]=0
	print(y,x)	
	print(t[y,x])
	
	
print(x)
print(y)
print(n)
print(l)



-- EXECUTION TIME:
0.995742
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/1280/main.py", line 27, in <module>
    if(t[y,x]==33):
IndexError: index 11 is out of bounds for axis 0 with size 11

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:47:44) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	
	if(t[y,x]==33):
		y=p
		x=j
	elif(t[y,x]==22):
		l=l-5
	elif(t[y,x]==11):
		n=n+1
		t[y,x]=0
	print(y,x)	
	print(t[y,x])
	
	
print(x)
print(y)
print(n)
print(l)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:50:00) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j

	print(y,x)	
	print(t[y,x])
	
	
print(x)
print(y)
print(n)
print(l)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:50:30) 
-- CODE:
from numpy import*
t=array(eval(input("Digite o tabuleiro: ")))
m=input("Movimentos: ")
x=0
y=0
n=0
l=100
for i in m:
	j=x
	p=y
	if i=="A":
		x=x-1
	elif i=="D":
		x=x+1
	elif i=="W":
		y=y-1
	elif i=="S":
		y=y+1

	if(y<0)or(x<0):
		y=p
		x=j
	elif (y>shape(t)[1])or(x>shape(t)[0]):
		y=p
		x=j
	print(i)	

	print(y,x)	
	
	
	
print(x)
print(y)
print(n)
print(l)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
